tests/fixtures/positive/style/ForbiddenImport.kt
package style

import java.util.Date
import sun.misc.Unsafe

fun example() {
    val d = Date()
}
