tests/fixtures/negative/style/UnusedPrivateProperty.kt
package fixtures.negative.style

private val used = 1

fun foo() = used
